<resources>
    <string name="MiPushAppId">2882303761517434951</string>
    <string name="MiPushAppKey">5741743476951</string>
    <string name="hwpush_ability_value" translatable="false">successRateAnalytics</string>
    <string name="scheme">hourclassroom</string>
    <string name="host">51shizhong.com</string>
    <string name="scheme_home_path">/home</string>
    <string name="scheme_store_list_path">/store_list</string>
    <string name="scheme_store_detail_path">/store_detail</string>
    <string name="scheme_place_detail_path">/place_detail</string>
    <string name="scheme_classroom_detail_path">/classroom_detail</string>
    <string name="scheme_map_path">/map</string>
    <string name="scheme_atlas_list_path">/atlas_list</string>
    <string name="scheme_reserve_path">/reserve</string>
    <string name="scheme_course_home_path">/course_home</string>
    <string name="scheme_classroom_home_path">/classroom_home</string>
    <string name="scheme_course_subject_path">/course_subject</string>
    <string name="scheme_course_list_path">/course_list</string>
    <string name="scheme_course_detail_path">/course_detail</string>
    <string name="scheme_teacher_home_path">/teacher_home</string>
    <string name="scheme_teacher_subject_path">/teacher_subject</string>
    <string name="scheme_organization_teacher_list_path">/organization_teacher_list</string>
    <string name="scheme_personal_teacher_list_path">/personal_teacher_list</string>
    <string name="scheme_teacher_detail_path">/teacher_detail</string>
    <string name="scheme_personal_home_path">/personal_home</string>
    <string name="scheme_authentication_wifi_path">/authentication_wifi</string>
    <string name="scheme_accompany_read_path">/accompany_read</string>
    <string name="scheme_mine_message_path">/mine_message</string>
    <string name="scheme_order_message_path">/order_message</string>
    <string name="scheme_system_message_path">/system_message</string>
    <string name="scheme_accompany_read_remind_path">/accompany_read_remind</string>
    <string name="scheme_search_path">/search</string>
    <string name="scheme_search_result_path">/search_result</string>
    <string name="scheme_around_environment_path">/around_environment</string>
    <string name="scheme_around_environment_map_path">/around_environment_map</string>
    <string name="scheme_personal_information_path">/personal_information</string>
    <string name="scheme_organization_authentication_path">/organization_authentication</string>
    <string name="scheme_personal_teacher_information_path">/personal_teacher_information</string>
    <string name="scheme_mine_organization_path">/mine_organization</string>
    <string name="scheme_mine_course_path">/mine_course</string>
    <string name="scheme_publish_course_path">/publish_course</string>
    <string name="scheme_mine_order_all_path">/mine_order_all</string>
    <string name="scheme_mine_order_wait_pay_path">/mine_order_wait_pay</string>
    <string name="scheme_mine_order_underway_path">/mine_order_underway</string>
    <string name="scheme_mine_order_finish_path">/mine_order_finish</string>
    <string name="scheme_mine_discount_coupon_path">/mine_discount_coupon</string>
    <string name="scheme_mine_attention_path">/mine_attention</string>
    <string name="scheme_remind_set_path">/remind_set</string>
    <string name="scheme_more_path">/more</string>
    <string name="scheme_web_message_detail_path">/web_message_detail</string>
    <string name="scheme_web_activity_detail_path">/web_activity_detail</string>
    <string name="scheme_supplier_detail_path">/supplier_detail</string>
    <string name="scheme_home_uri">hourclassroom://51shizhong.com/home</string>
    <string name="scheme_course_home_uri">hourclassroom://51shizhong.com/course_home</string>
    <string name="scheme_teacher_home_uri">hourclassroom://51shizhong.com/teacher_home</string>
    <string name="scheme_personal_home_uri">hourclassroom://51shizhong.com/personal_home</string>
    <string name="desc">~</string>
    <string name="lable_teacher">老师</string>
    <string name="course">课程</string>
    <string name="course_zhuan">专题</string>
    <string name="affirm">确定</string>
    <string name="fail_network_request">请求网络失败!</string>
    <string name="fail_data_request">数据获取失败!</string>
    <string name="fail_load">加载失败，请重试！</string>
    <string name="user_agreement">时钟教室用户协议</string>
    <string name="coupon_explain">优惠券说明</string>
    <string name="action_page">活动页</string>
    <string name="is_share_accompany_pwd">分享陪读密码</string>
    <string name="choose">选择</string>
    <string name="mustfill">必填</string>
    <string name="supporting_service">配套服务</string>
    <string name="free_service">免费服务</string>
    <string name="no_free_service">收费服务</string>
    <string name="surroundings">周边环境</string>
    <string name="txt_phone_number">400 608 2626</string>
    <string name="txt_phone_number_">400–608–2626</string>
    <string name="toast_show_course_no_exist">课程不存在</string>
    <string name="course_not_audit">课程未审核通过</string>
    <string name="course_canceled">课程已取消</string>
    <string name="apply_over_hint">报名已完成，下次请赶早哦</string>
    <string name="course_over_hint">课程已结束，下次请赶早哦</string>
    <string name="dialog_show_coupon_use">优惠券已失效，是否确定删除优惠券</string>
    <string name="restaurant">餐厅</string>
    <string name="hotel">酒店</string>
    <string name="school">学校</string>
    <string name="class_hour">课室</string>
    <string name="store_detail">门店详情</string>
    <string name="go_setting">去设置</string>
    <string name="ordinary_days">平日</string>
    <string name="weekend">周末</string>
    <string name="splendid_atlas">精彩图集</string>
    <string name="immediately_sign_up">立即报名</string>
    <string name="comment">评论</string>
    <string name="course_commit">课程提交</string>
    <string name="sign_up_result">报名结果</string>
    <string name="sign_up_success">报名成功</string>
    <string name="sign_up_fail">报名失败</string>
    <string name="invoice_price">发票金额</string>
    <string name="choose_course_times">选择课次</string>
    <string name="image_transition">image_transition</string>
    <string name="get_page_name">get_page_name</string>
    <string name="login_pre_page">PrePage</string>
    <string name="from_page_find">from_page_find</string>
    <string name="redirect_open_url">redirect_open_url</string>
    <string name="redirect_tid">redirect_tid</string>
    <string name="redirect_owner">redirect_owner</string>
    <string name="label_immediately_login">立即登录</string>
    <string name="label_chooseLogin">账号登录</string>
    <string name="label_myBalance">我的余额</string>
    <string name="label_myBankcard">我的银行卡</string>
    <string name="label_myDiscount">我的优惠券</string>
    <string name="label_myAttention">我的关注</string>
    <string name="label_myWallet">我的钱包</string>
    <string name="label_wifi">认证Wi-Fi</string>
    <string name="label_setting">设置</string>
    <string name="label_finish">完成</string>
    <string name="label_checkAllOrder">全部</string>
    <string name="label_wait_pay">待支付</string>
    <string name="label_mineInvoice">我的发票</string>
    <string name="label_service">服务协议、联系客服等</string>
    <string name="label_more">更多</string>
    <string name="label_check_more">查看更多</string>
    <string name="label_check_more_class_hour">查看更多课室</string>
    <string name="label_chooseLogin_or_registered">登录/注册</string>
    <string name="label_reserve_person">预订人</string>
    <string name="label_immediately_register">立即注册</string>
    <string name="label_login">登录</string>
    <string name="label_hint_password">输入密码</string>
    <string name="label_forget_password">忘记密码</string>
    <string name="label_social_account">使用其他账号登录</string>
    <string name="label_login_beUse">请输入正确格式的手机号</string>
    <string name="label_login_hasContent">用户名与密码不能为空</string>
    <string name="label_login_bePassword">密码必须是字母或数字组成，且长度为6至18位</string>
    <string name="label_hint_phonelogin">输入手机号</string>
    <string name="label_password_login">账号密码登录</string>
    <string name="label_avatar">头像</string>
    <string name="label_nickname">昵称</string>
    <string name="label_login_password">登录密码</string>
    <string name="label_pay_password">支付密码</string>
    <string name="label_sex">性别</string>
    <string name="label_mobile">手机号</string>
    <string name="label_email">邮箱</string>
    <string name="label_contact_info">联系人信息</string>
    <string name="label_male">男</string>
    <string name="label_female">女</string>
    <string name="label_cancel">取消</string>
    <string name="label_quit">退出当前账号</string>
    <string name="label_modify_mail">绑定/修改邮箱</string>
    <string name="label_save">保存</string>
    <string name="label_help_find_password">邮箱绑定后可以帮助您找回密码</string>
    <string name="label_password_format">由字母、数字、汉字或下划线组成,限4&#8211;16个字,不能以下划线开头或结尾</string>
    <string name="label_affirm_commit">确认提交</string>
    <string name="label_binding">第三方账号绑定</string>
    <string name="label_go_binding">去绑定</string>
    <string name="label_has_binding">已绑定</string>
    <string name="label_course">我的课程</string>
    <string name="label_show_course">发布课程</string>
    <string name="label_person_mine_course">我发布的课程</string>
    <string name="accompany_read_online">在线陪读</string>
    <string name="accompany_pwd_hint">输入陪读课室密码</string>
    <string name="accompany_help_page">在线陪读帮助页</string>
    <string name="accompany_help_str1">如何获取直播陪读密码？</string>
    <string name="accompany_help_str2">●</string>
    <string name="accompany_help_str3">如果您是家长，您可以从老师处获取直播陪读密码。</string>
    <string name="accompany_help_str4">如果您是老师，在您预订课室后即可获得直播陪读密码。</string>
    <string name="accompany_help_str5">关于直播陪读</string>
    <string name="accompany_help_str6">可以更方便家长朋友们观看孩子们上课的即时视频。</string>
    <string name="accompany_help_str7"> 当前开放直播陪读的门店：徐汇虹梅中心、普陀友通中心、静安达人湾中心、浦东龙阳中心、闵行新乐坊中心，须连接门店无线网络后才可以观看，后续将会开放外网观看功能，届时您足不出户也可以观看到孩子上课的即时视频，敬请期待！</string>
    <string name="accompany_help_str8">直播陪读提醒</string>
    <string name="accompany_help_str9">家长可在课程未开始前，在陪读页输入陪读密码。在3天内开始的课程可以被加入提醒，避免错过。距课程开始超过3天的课室密码无效</string>
    <string name="accompany_help_str10">请输入3天内开课的陪读密码</string>
    <string name="accompany_staystart_hint">请连接陪读课室所在门店的Wi-Fi并登录认证后刷新</string>
    <string name="accompany_staystart_wifi">请连接陪读课室所在门店的Wi-Fi</string>
    <string name="accompany_add_remind">加入提醒</string>
    <string name="accompany_set_remind">设置提醒</string>
    <string name="accompany_cancel_remind">取消提醒</string>
    <string name="accompany_add_remind_success">加入提醒成功！</string>
    <string name="accompany_add_remind_fail">加入提醒失败！</string>
    <string name="accompany_cancel_remind_success">取消提醒成功！</string>
    <string name="accompany_cancel_remind_fail">取消提醒失败！</string>
    <string name="accompany_dialog_wifi">请连接课室所在门店WIFI并认证</string>
    <string name="invoice_next">下一步</string>
    <string name="wechat">微信</string>
    <string name="wechat_circle">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="sina">新浪微博</string>
    <string name="sms">短信</string>
    <string name="reservation_date_title">选择上课起止日期</string>
    <string name="reservation_week_title">选择每周课程编排</string>
    <string name="reservation_week_content">每周几上课，可多选</string>
    <string name="reservation_time_title">选择上课时间</string>
    <string name="reservation_time_content">几点到几点上课</string>
    <string name="reservation_start_time">选择开始时间</string>
    <string name="reservation_end_time">选择结束时间</string>
    <string name="reservation_start_time_xml">09:00</string>
    <string name="reservation_end_time_xml">10:00</string>
    <string name="course_reservation_title">发布课程</string>
    <string name="course_reservation_address">请选择上课门店</string>
    <string name="course_reservation_class_address">上课门店</string>
    <string name="course_reservation_date">上课的日期范围</string>
    <string name="publish_course_success">课程发布成功</string>
    <string name="publish_course_content">工作人员审核通过后展示课程信息</string>
    <string name="publish_success">发布成功</string>
</resources>