<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/include_head_green_bg_left_icon_right_text_layout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/DIMEN_70DP"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc"
            android:src="@drawable/order_sucess_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_10DP"
            android:text="@string/publish_success"
            android:textColor="@color/order_black"
            android:textSize="@dimen/DIMEN_16DP" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/DIMEN_50DP"
        android:text="@string/publish_course_success"
        android:textColor="@color/color_black_33"
        android:textSize="@dimen/DIMEN_14DP" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/DIMEN_12DP"
        android:text="@string/publish_course_content"
        android:textColor="@color/color_black_33"
        android:textSize="@dimen/DIMEN_14DP" />


</LinearLayout>