<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <View style="@style/linestyle_h_orange" />

    <RelativeLayout
        android:id="@+id/accompany_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_60DP"
        android:layout_marginBottom="@dimen/DIMEN_12DP"
        android:layout_marginLeft="@dimen/DIMEN_12DP"
        android:layout_marginRight="@dimen/DIMEN_12DP"
        android:visibility="gone">

        <TextView
            style="@style/textstyle_14p_black"
            android:layout_centerVertical="true"
            android:text="@string/is_share_accompany_pwd" />

        <View
            style="@style/linestyle_order_divider_view"
            android:layout_alignParentBottom="true" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/accompany_pwd_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/DIMEN_12DP"
            android:layout_centerVertical="true"
            android:background="@null"
            android:checked="true"
            app:theme="@style/Color1SwitchStyle" />
        <!--<CheckBox
            android:id="@+id/accompany_pwd_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:button="@drawable/cb_default_bg"
            android:checked="true" />-->
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/DIMEN_24DP"
        android:layout_marginTop="@dimen/DIMEN_12DP"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/share_wechat"
            style="@style/textstyle_12p_black"
            android:layout_weight="1"
            android:drawablePadding="@dimen/DIMEN_6DP"
            android:drawableTop="@drawable/wechat_share_icon"
            android:gravity="center"
            android:text="@string/wechat" />

        <TextView
            android:id="@+id/share_wechat_circle"
            style="@style/textstyle_12p_black"
            android:layout_weight="1"
            android:drawablePadding="@dimen/DIMEN_6DP"
            android:drawableTop="@drawable/circle_share_icon"
            android:gravity="center"
            android:text="@string/wechat_circle" />

        <TextView
            android:id="@+id/share_qq"
            style="@style/textstyle_12p_black"
            android:layout_weight="1"
            android:drawablePadding="@dimen/DIMEN_6DP"
            android:drawableTop="@drawable/qq_share_icon"
            android:gravity="center"
            android:text="@string/qq" />

        <TextView
            android:id="@+id/share_sina"
            style="@style/textstyle_12p_black"
            android:layout_weight="1"
            android:drawablePadding="@dimen/DIMEN_6DP"
            android:drawableTop="@drawable/weibo_share_icon"
            android:gravity="center"
            android:text="@string/sina" />

        <TextView
            android:id="@+id/share_sms"
            style="@style/textstyle_12p_black"
            android:layout_weight="1"
            android:drawablePadding="@dimen/DIMEN_6DP"
            android:drawableTop="@drawable/sms_share_icon"
            android:gravity="center"
            android:text="@string/sms" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/share_cancel"
        style="@style/textstyle_17p_orange"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_34DP"
        android:layout_marginBottom="@dimen/DIMEN_12DP"
        android:layout_marginLeft="@dimen/DIMEN_12DP"
        android:layout_marginRight="@dimen/DIMEN_12DP"
        android:background="@drawable/bg_white_bottom_orange_f06000_frame"
        android:gravity="center"
        android:text="@string/label_cancel" />

</LinearLayout>