<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/DIMEN_125DP"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/DIMEN_64DP"
    android:layout_marginRight="@dimen/DIMEN_64DP"
    android:background="@drawable/bg_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/video_wifi_name"
        style="@style/textstyle_14p_black"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_79DP"
        android:gravity="center"
        android:text="@string/accompany_dialog_wifi" />

    <View style="@style/linestyle_h_unfocused" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/video_wifi_cancel"
            style="@style/textstyle_17p_blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_cancel" />

        <View style="@style/linestyle_v_unfocused" />

        <TextView
            android:id="@+id/video_wifi_ok"
            style="@style/textstyle_17p_blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/affirm" />
    </LinearLayout>

</LinearLayout>
